--- a/app/src/main/res/layout/layout_clase_principal.xml
+++ b/app/src/main/res/layout/layout_clase_principal.xml
@@ -9,6 +9,7 @@
 
     <Button
         android:id="@+id/b_servidor"
+        android:onClick="manejador"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="43dp"
