--- a/app/src/main/res/layout/activity_clase_cliente.xml
+++ b/app/src/main/res/layout/activity_clase_cliente.xml
@@ -6,4 +6,104 @@
     android:layout_height="match_parent"
     tools:context=".ClaseCliente">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="181dp"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteY="5dp">
+
+        <TextView
+            android:id="@+id/t_datosCliente"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Escribe los datos del Servidor"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            tools:layout_editor_absoluteX="29dp"
+            tools:layout_editor_absoluteY="16dp" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Dirección IP"
+            android:textColorLink="@color/colorPrimary"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="83dp" />
+
+        <EditText
+            android:id="@+id/plain_ip"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="192.168.1.2"
+            android:inputType="textPersonName"
+            android:textAlignment="center" />
+
+        <TextView
+            android:id="@+id/t_puerto"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Puerto"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/editText2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="8080"
+            android:inputType="textPersonName"
+            android:textAlignment="center" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="174dp"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="195dp">
+
+        <TextView
+            android:id="@+id/t_personalizar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Personaliza tu Conversación"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            tools:layout_editor_absoluteX="29dp"
+            tools:layout_editor_absoluteY="239dp" />
+
+        <TextView
+            android:id="@+id/t_nombre"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Tu nombre"
+            android:textColorLink="@color/colorPrimary"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="83dp" />
+
+        <EditText
+            android:id="@+id/editText3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Da Homa"
+            android:inputType="textPersonName"
+            android:textAlignment="center" />
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/b_vamosAChatear"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Vamos a chatear"
+        tools:layout_editor_absoluteX="116dp"
+        tools:layout_editor_absoluteY="401dp" />
+
 </android.support.constraint.ConstraintLayout>
