--- a/app/src/main/res/layout/layout_clase_principal.xml
+++ b/app/src/main/res/layout/layout_clase_principal.xml
@@ -9,6 +9,7 @@
 
     <Button
         android:id="@+id/b_servidor"
+        android:onClick="manejador"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:background="@drawable/server"
@@ -21,6 +22,7 @@
 
     <Button
         android:id="@+id/b_cliente"
+        android:onClick="manejador"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:background="@drawable/movil"
