--- a/app/src/main/res/layout/activity_clase_chat.xml
+++ b/app/src/main/res/layout/activity_clase_chat.xml
@@ -29,7 +29,7 @@
             android:layout_height="97dp"
             android:orientation="horizontal">
 
-            <TextView
+            <EditText
                 android:id="@+id/textView14"
                 android:layout_width="283dp"
                 android:layout_height="match_parent"
