--- a/app/src/main/res/layout/activity_clase_chat.xml
+++ b/app/src/main/res/layout/activity_clase_chat.xml
@@ -8,8 +8,15 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="431dp"
         android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView11"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Bienvenido a la app Chat Sockets. Let's go chat!"
+            android:textSize="18sp" />
 
         <ScrollView
             android:layout_width="match_parent"
@@ -19,32 +26,34 @@
                 android:id="@+id/tvSalida"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Bienvenido a la app Chat Sockets. Let's go chat!"
                 android:textSize="18sp" />
         </ScrollView>
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="97dp"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/editTextMensajes"
-                android:layout_width="283dp"
-                android:layout_height="match_parent"
-                android:text=""
-                android:textSize="18sp" />
-
-            <Button
-                android:id="@+id/button2"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_weight="1"
-                android:background="@drawable/enviar"
-                android:onClick="enviarMensaje"
-                android:text="" />
-        </LinearLayout>
-
     </LinearLayout>
+
+    <EditText
+        android:id="@+id/editTextMensajes"
+        android:layout_width="283dp"
+        android:layout_height="80dp"
+        android:text=""
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+
+        android:layout_weight="1"
+        android:background="@drawable/enviar"
+        android:onClick="enviarMensaje"
+        android:text=""
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 </android.support.constraint.ConstraintLayout>
