--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,24 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="bocadilloServidor"> 
+        <item name="android:layout_width">wrap_content</item>     
+        <item name="android:layout_height">100dp</item>    
+        <item name="android:textColor">@color/colorTextoBocadilloServidor</item>
+        <item name="android:typeface">monospace</item>
+        <item name="android:layout_margin">10dp</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:background"> @drawable/componente_personalizado_servidor</item>
+    </style>
+
+    <style name="bocadilloCliente"> 
+        <item name="android:layout_width">wrap_content</item>     
+        <item name="android:layout_height">100dp</item>    
+        <item name="android:textColor">@color/colorTextoBocadilloCliente</item>
+        <item name="android:typeface">monospace</item>
+        <item name="android:layout_margin">10dp</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:background"> @drawable/componente_personalizado_cliente</item>
+    </style>
+
 </resources>
