--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3f51b5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorBackGroundBocadilloServidor">#272822</color>
+    <color name="colorTextoBocadilloServidor">#FD971F</color>
+    <color name="colorBackGroundBocadilloCliente">#404040</color>
+    <color name="colorTextoBocadilloCliente">#AE81FF</color>
 </resources>
