--- a/app/src/main/res/layout/activity_clase_chat.xml
+++ b/app/src/main/res/layout/activity_clase_chat.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="431dp"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <TextView
@@ -32,8 +32,10 @@
             style="@style/bocadilloCliente" />
 
         <ScrollView
+            android:id="@+id/scrollViewChat"
             android:layout_width="match_parent"
-            android:layout_height="405dp">
+            android:layout_height="match_parent"
+            android:paddingBottom="80dp">
 
             <LinearLayout
                 android:id="@+id/linearLayoutChat"
