--- a/app/src/main/res/layout/activity_clase_chat.xml
+++ b/app/src/main/res/layout/activity_clase_chat.xml
@@ -4,32 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fondo"
     tools:context=".ClaseChat">
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/textView11"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Bienvenido a la app Chat Sockets. Let's go chat!"
-            android:textSize="18sp" />
-
-        <TextView
-            android:id="@+id/textView"
-
-            android:text="Soy el servidor"
-            style="@style/bocadilloServidor"
-            />
-
-        <TextView
-            android:id="@+id/textView2"
-
-            android:text="Soy el cliente"
-            style="@style/bocadilloCliente" />
 
         <ScrollView
             android:id="@+id/scrollViewChat"
@@ -51,16 +33,13 @@
 
     <EditText
         android:id="@+id/editTextMensajes"
-        android:layout_width="283dp"
-        android:layout_height="80dp"
-        android:text=""
-        android:textSize="18sp"
+        style="@style/bocadilloEditTextChat"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.116"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.962" />
 
     <Button
         android:id="@+id/button2"
@@ -72,5 +51,9 @@
         android:onClick="enviarMensaje"
         android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.93"
+        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
+        app:layout_constraintVertical_bias="1.0" />
 </android.support.constraint.ConstraintLayout>
