ultimas modificaciones: vuelta a horizontalLinearLayout dentro de verticalLinearLayout mas textView truco

--- a/app/src/main/res/layout/activity_clase_chat.xml
+++ b/app/src/main/res/layout/activity_clase_chat.xml
@@ -20,7 +20,7 @@
             android:paddingBottom="80dp">
 
             <LinearLayout
-                android:id="@+id/linearLayoutChat"
+                android:id="@+id/linearLayoutChatVertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
