ultimas modificaciones: entrega

--- a/app/src/main/res/drawable/componente_personalizado_consola.xml
+++ b/app/src/main/res/drawable/componente_personalizado_consola.xml
@@ -6,7 +6,8 @@
         android:color="@color/colorTextoBocadilloConsola" />
 
     <solid android:color="@android:color/black" />
-
+    <padding
+        android:bottom="20dp"/>
     <corners
         android:radius="40dp"/>
 
