--- a/app/src/main/res/drawable/componente_personalizado_enviado.xml
+++ b/app/src/main/res/drawable/componente_personalizado_enviado.xml
@@ -3,10 +3,12 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/colorTextoBocadilloServidor" />
+        android:color="@color/colorTextoBocadilloServidor"
+        />
 
     <solid android:color="@color/colorBackGroundBocadilloServidor" />
-
+<padding
+    android:bottom="20dp"/>
     <corners
         android:bottomLeftRadius="40dp"
         android:bottomRightRadius="40dp"
